  unrealistic results when using The Grinder to drive a cluster of
  servers through SSL session-aware load balancers. More SSL sessions
  will be created, so expect high CPU load on both client and server,
  and average times for first contact with an HTTPS server within a
  test run to be significantly higher. Thanks to Joshua Reedy for
  prompting me to do this, and for testing the change.

  Email script example from Tom Pittard.

  Implement HTTPPluginConnection.removeBasicAuthorization() and
  HTTPPluginConnection.removeDigestAuthorization(). The parameters
  to this method, and semantics of the corresponding add methods, have
  been changed to match HTTPClient. The clearAll methods have been
  removed from the API.


Grinder 3.0-beta16
------------------

  Multicast is no longer used for distributing console messages
  signals.

  Multicast has been a frequent source of newbie problems, and has
  also made The Grinder unreasonably hard to use with some corporate
  network configurations. Console messages are now sent over TCP
  connections to the agent processes, which fan-out the signals to
  their worker processes. The processing is multi-threaded and
  asynchronous and I expect it to scale well.

  IMPORTANT: The communication properties have changed. The following
  properties can be set in grinder.properties:

    grinder.consoleHost	  (previously grinder.consoleAddress)
    grinder.consolePort
    grinder.useConsole    (previously grinder.receiveConsoleSignals /
	                   grinder.reportToConsole)

  The grinder.grinderAddress and grinder.grinderPort properties have
  been removed. Corresponding changes have been made to the console
  options dialog.


Grinder 3.0-beta15
------------------

  The use of the implicit 'grinder' script context object is
  deprecated. You should explicitly "from net.grinder.Grinder import
  grinder" in your scripts to ensure they remain compatible with
  future releases.
