@@ -5,7 +5,7 @@ grinder.jvm.arguments=-Dpython.home=d:/jython/jython-2.1
 
 grinder.processes=1
 grinder.threads=1
-grinder.runs=10
+grinder.runs=0
 
 #grinder.useConsole=false
 
@@ -32,4 +32,5 @@ grinder.script=helloworld.py
 #grinder.script=jmsreceiver.py
 #grinder.script=console.py
 #grinder.script=scriptlifecycle.py
+#grinder.script=httpunit.py
 #grinder.script=email.py
